--- a/ci/tasks/pre-build.yml
+++ b/ci/tasks/pre-build.yml
@@ -9,10 +9,9 @@ image_resource:
 #   - name: task-scripts
 inputs:
     - name: subject
+    - name: master-pipeline
 
 run:
-#   path: subject/ci/pre-build.sh
+  path: ./master-pipeline/ci/pre-build.sh
     # path: echo
     # args: [hello world]
-    path: sh
-    args: [echo "hi";pwd;ls -la]
