--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
       - get: subject
       - task: pre-build
         file: master-pipeline/ci/tasks/pre-build.yml
-    #   - task: build
-    #     file: master-pipeline/ci/tasks/build.yml
-    #   - task: pre-build
-    #     file: master-pipeline/ci/tasks/post-build.yml
+      - task: build
+        file: master-pipeline/ci/tasks/build.yml
+      - task: pre-build
+        file: master-pipeline/ci/tasks/post-build.yml
