--- a/ci/tasks/post-build.yml
+++ b/ci/tasks/post-build.yml
@@ -5,13 +5,9 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
-# inputs:
-#   - name: task-scripts
 inputs:
     - name: subject
     - name: master-pipeline
 
 run:
-  path: ./subject/ci/post-build.sh
-    # path: echo
-    # args: [hello world]
+  path: ./master-pipeline/ci/tasks/post-build.sh
